# cli-calendar

./: Cargo.toml  README.md  todo.tst
src/: data_io.rs  dates.rs  display.rs  format.rs  main.rs  structures.rs  tui_handler.rs
src/data_io/: load.rs  parser.rs  paths.rs  save.rs  std_rw.rs
src/dates/: holidays.rs  implementations.rs  structs.rs
src/dates/implementations/: day.rs  event.rs  month.rs  time24h.rs  year.rs
src/display/: calendar.rs  colours.rs  content_box.rs  incoming_events.rs  progress_bar.rs  utils.rs
src/display/calendar/: misc.rs  month.rs  year.rs
src/format/: emoji.rs  text_fitting.rs
src/structures/: day.rs  event.rs  holiday.rs  month.rs  time24h.rs  year.rs
src/tui_handler/: args.rs  commands.rs  terminal_format.rs
users/ben/: ben-2024.json  how-to-read-setting.txt  settings.bmsf
