[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
clap = { version = "4.5.3", features = ["derive"] }
indicatif = "0.17.0"
regex = "1.5"
heaptrack = "0.4.0"